kube/dev/docs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-sdk
  namespace: rdm-fe
  labels:
    app: docs-sdk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs-sdk
  template:
    metadata:
      labels:
        app: docs-sdk
    spec:
      containers:
        - name: docs-sdk
          image: 060368459872.dkr.ecr.us-gov-east-1.amazonaws.com/argonne-adc-sdk_docs:$COMMIT_SHA1
          ports:
            - containerPort: 80
              name: http          
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "250m"
