kube/dev/docs-service.yml

apiVersion: v1
kind: Service
metadata:
  name: docs-sdk
  namespace: rdm-fe
  labels:
    app: docs-sdk
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: docs-sdk
